--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -16,7 +16,7 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#673AB7"
+        android:background="@color/colorPrimaryDark"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@mipmap/ic_launcher_round" />
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="My Ride"
+        android:text="DriveEZ Companion"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#020000" />
 
@@ -33,7 +33,6 @@
         android:id="@+id/about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="About"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#2B2B2B"
         android:textStyle="bold|italic" />
