--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -19,7 +19,7 @@
         <item
             android:id="@+id/nav_tools"
             android:icon="@drawable/ic_help_outline_black_24dp"
-            android:title="Tutorial" />
+            android:title="About" />
     </group>
 
     <item android:title="Communicate">
