--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00BCD4</color>
-    <color name="colorPrimaryDark">#00647D</color>
-    <color name="colorAccent">#CFFDFF</color>
-    <color name="background">#CFFDFF</color>
+    <color name="colorPrimary">#6F2DBD</color>
+    <color name="colorPrimaryDark">#4F1A82</color>
+    <color name="colorAccent">#6F2DBD</color>
+    <color name="background">#F5EFFF</color>
 </resources>
